--- a/configs/cifar_fed.yaml
+++ b/configs/cifar_fed.yaml
@@ -17,7 +17,7 @@ log_interval: 100
 poisoning_proportion: 0.5
 backdoor_label: 8
 
-resume_model: resume_model/model_epoch_200.pt.tar
+resume_model: #resume_model/model_epoch_200.pt.tar
 
 save_model: False
 log: True
@@ -39,7 +39,7 @@ fl_adv_group_size: 5
 # fl_single_epoch_attack: 200
 
 attack: ThrDFed
-defense: 'FL-Detector'
+defense: 'FedAvg'
 fl_num_neurons: 5
 noise_mask_alpha: 0 # 0.5
 lagrange_step: 0.1
