--- a/configs/cifar_fed.yaml
+++ b/configs/cifar_fed.yaml
@@ -7,10 +7,10 @@ test_batch_size: 100
 lr: 0.01
 momentum: 0.9
 decay: 0.0005
-epochs: 220
+epochs: 800
 poison_epoch: 200
 poison_epoch_stop: 220
-save_on_epochs: [] # [30, 50, 80, 100, 120, 150, 170, 200]
+save_on_epochs: [30, 50, 100, 105, 200, 205, 300, 305, 400, 405, 500, 550, 600, 650, 700, 750, 790, 800]
 optimizer: SGD
 log_interval: 100
 
@@ -19,7 +19,7 @@ backdoor_label: 8
 
 resume_model: #resume_model/model_epoch_200.pt.tar
 
-save_model: False
+save_model: True
 log: True
 
 transform_train: True
